HTTPS: Dockerfile generates self-signed SSL certificate. Conflicts with current implementation of WebSockets because they are not secure by default.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon -i -L app.js",
+    "dev": "nodemon --inspect -i spec/ app.js",
     "test": "jest"
   },
   "keywords": [],
