--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "test": "jest"
   },
   "keywords": [],
-  "author": "octoclonius",
+  "author": "wissh-nd",
   "license": "MIT",
   "dependencies": {
     "@xterm/addon-attach": "^0.10.0-beta.1",
