--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,8 +13,8 @@ FROM node:${NODE_VERSION}-alpine as base
 RUN apk add --update --no-cache openssh bash make python3 g++ openssl
 
 # Generate SSL certificate.
-RUN openssl req -newkey rsa:4096 -noenc -keyout /etc/ssl/private/key.pem -x509 -days 365 -out /etc/ssl/certs/certificate.pem -subj "/CN=wissh" && \
-    chmod 444 /etc/ssl/private/key.pem
+#RUN openssl req -newkey rsa:4096 -noenc -keyout /etc/ssl/private/key.pem -x509 -days 365 -out /etc/ssl/certs/certificate.pem -subj "/CN=wissh" && \
+#    chmod 444 /etc/ssl/private/key.pem
 
 # Expose the port that the application listens on.
 EXPOSE 443
