--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,7 +14,8 @@ RUN --mount=type=bind,source=package.json,target=package.json \
     --mount=type=bind,source=package-lock.json,target=package-lock.json \
     --mount=type=cache,target=/root/.npm \
     npm ci
-USER node
+COPY node_modules/@xterm node_modules/@xterm
+#USER node
 CMD npm run start
 
 FROM base as prod
@@ -23,8 +24,11 @@ RUN --mount=type=bind,source=package.json,target=package.json \
     --mount=type=bind,source=package-lock.json,target=package-lock.json \
     --mount=type=cache,target=/root/.npm \
     npm ci --omit=dev
+COPY node_modules/@xterm node_modules/@xterm
+RUN npm run build
+RUN npm install -g serve
 USER node
-CMD npm run build
+CMD serve -s build --ssl-cert "/etc/ssl/certs/certificate.pem" --ssl-key "/etc/ssl/private/key.pem"
 
 FROM base as test
 ENV NODE_ENV test
@@ -32,5 +36,6 @@ RUN --mount=type=bind,source=package.json,target=package.json \
     --mount=type=bind,source=package-lock.json,target=package-lock.json \
     --mount=type=cache,target=/root/.npm \
     npm ci
+COPY node_modules/@xterm node_modules/@xterm
 USER node
 RUN npm run test
