--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,14 +6,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@xterm/addon-attach": "^0.10.0-beta.1",
+    "@xterm/addon-fit": "^0.9.0-beta.1",
+    "@xterm/addon-webgl": "^0.17.0-beta.1",
+    "@xterm/xterm": "^5.4.0-beta.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "SSL_CRT_FILE=/etc/ssl/certs/certificate.pem SSL_KEY_FILE=/etc/ssl/private/key.pem HTTPS=true react-scripts start",
+    "build": "SSL_CRT_FILE=/etc/ssl/certs/certificate.pem SSL_KEY_FILE=/etc/ssl/private/key.pem HTTPS=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
