--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ services:
   backend:
     build:
       context: backend
-      target: prod # dev, prod
+      target: dev # dev, prod
     container_name: backend
     ports:
       - "8000:8000"
@@ -13,7 +13,7 @@ services:
   frontend:
     build:
       context: frontend
-      target: prod # dev, prod
+      target: dev # dev, prod
     container_name: frontend
     ports:
       - "3000:3000"
