--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "start": "HOST=localhost SSL_CRT_FILE=../ssl/certs/certificate.pem SSL_KEY_FILE=../ssl/private/key.pem HTTPS=true react-scripts start",
+    "docker-start": "SSL_CRT_FILE=../ssl/certs/certificate.pem SSL_KEY_FILE=../ssl/private/key.pem HTTPS=true react-scripts start",
     "build": "SSL_CRT_FILE=../ssl/certs/certificate.pem SSL_KEY_FILE=../ssl/private/key.pem HTTPS=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
