--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "node-pty": "^1.0.0",
+    "ssh2": "^1.15.0",
     "ws": "^8.16.0"
   },
   "devDependencies": {
