--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "ws": "^8.16.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/ws": "^8.5.10",
     "jest": "^29.7.0",
