--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.2.0",
+    "helmet": "^7.1.0",
     "node-pty": "^1.0.0",
     "ssh2": "^1.15.0",
     "ws": "^8.16.0"
